update robots setting

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name='theme-color' content='#000000' />
     <meta
       name='Create Application Template'
-      content='demo app'
+      content='provides a configured application template for you to build upon'
+      keywords='template, react, typescript, webpack, jest, eslint, styelint, javascript'
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
