switch primary styling method to styled-components

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta
       name='Create Application Template'
       content='provides a configured application template for you to build upon'
-      keywords='template, react, typescript, webpack, jest, eslint, stylelint, javascript'
+      keywords='template, react, typescript, styled-components, webpack, jest, eslint, stylelint, javascript'
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
